--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -240,7 +240,7 @@
       items:
         - name: Övervakningsöversikt
           href: service-fabric-diagnostics-overview.md
-        - name: Klusterloggning
+        - name: Klusterhändelser
           href: service-fabric-diagnostics-event-generation-infra.md
           items:
             - name: Användningskanal
@@ -567,6 +567,8 @@
           href: service-fabric-diagnostics-perf-wad.md
         - name: Rapportera och kontrollera hälsa
           href: service-fabric-diagnostics-how-to-report-and-check-service-health.md
+        - name: Lägga till loggning i tjänsten
+          href: service-fabric-how-to-diagnostics-log.md
         - name: Felsök med systemhälsorapporter
           href: service-fabric-understand-and-troubleshoot-with-system-health-reports.md
         - name: Visa hälsorapporter
