--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -18,44 +18,56 @@
       href: storage-how-to-use-files-linux.md
     - name: Ansluta i Mac
       href: storage-how-to-use-files-mac.md
-    - name: Hantera med portalen
+    - name: Hantera med Azure Portal
       href: storage-how-to-use-files-portal.md
+    - name: Hantera med PowerShell
+      href: storage-how-to-use-files-powershell.md
+    - name: Hantera med Azure CLI
+      href: storage-how-to-use-files-cli.md
+    - name: Hantera med Storage Explorer
+      href: storage-how-to-use-files-storage-explorer.md
 - name: Gör så här för att
   items:
-    - name: Planera och designa
+    - name: Planera
       items:
-        - name: Alternativ för lagringskontot
+        - name: Planera för distribution av Azure Files
+          href: storage-files-planning.md
+        - name: Planera för distribution av Azure File Sync
+          href: storage-sync-files-planning.md
+        - name: Förstå lagringskonton
           href: ../common/storage-account-options.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Distribuera Azure Files
-          items:
-            - name: Planera för distribution av Azure Files
-              href: storage-files-planning.md
-            - name: Så här distribuerar du Azure Files
-              href: storage-files-deployment-guide.md
-        - name: Distribuera Azure File Sync
-          items:
-            - name: Planera för distribution av Azure File Sync
-              href: storage-sync-files-planning.md
-            - name: Så här distribuerar du Azure File Sync
-              href: storage-sync-files-deployment-guide.md
-            - name: Inställningar för Azure File Sync-proxy och brandväggar
-              href: storage-sync-files-firewall-and-proxy.md
-        - name: Om ögonblicksbilder av filresurser
+        - name: Förstå ögonblicksbilder av filresurser
           href: storage-snapshots-files.md
-        - name: Så här arbetar du med ögonblicksbilder av filresurser
-          href: storage-how-to-use-files-snapshots.md
-        - name: Replikering
+        - name: Alternativ för lagringsredundans
           href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Mål för skalbarhet och prestanda
           href: storage-files-scale-targets.md
-        - name: Checklista för prestanda och skalbarhet
-          href: ../common/storage-performance-checklist.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Samtidighet
-          href: ../common/storage-concurrency.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Vägledning om haveriberedskap
           href: ../common/storage-disaster-recovery-guidance.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: Viktig information om Azure File Sync
+          href: storage-files-release-notes.md
+    - name: Distribuera
+      items:
+        - name: Så här distribuerar du Azure Files
+          href: storage-files-deployment-guide.md
+        - name: Så här distribuerar du Azure File Sync
+          href: storage-sync-files-deployment-guide.md
+        - name: Inställningar för Azure File Sync-proxy och brandväggar
+          href: storage-sync-files-firewall-and-proxy.md
+    - name: Hantera
+      items:
+        - name: Registrera en server med Azure File Sync
+          href: storage-sync-files-server-registration.md
+        - name: Lägga till en serverslutpunkt för Azure File Sync
+          href: storage-sync-files-server-endpoint.md
+        - name: 'PowerShell i molnet för Kina, myndigheter och Tyskland'
+          href: ../common/storage-powershell-independent-clouds.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: Azure Automation
+          href: ../common/storage-manage-with-automation.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Utveckla
       items:
+        - name: Hantera samtidighet
+          href: ../common/storage-concurrency.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: .NET
           href: storage-dotnet-how-to-use-files.md
         - name: Java
@@ -72,26 +84,6 @@
               href: ../common/storage-samples-java.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Konfigurera anslutningssträngar
           href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-    - name: Hantera
-      items:
-        - name: PowerShell för Azure Files
-          href: storage-how-to-use-files-powershell.md
-        - name: PowerShell för Azure Storage
-          href: ../common/storage-powershell-guide-full.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: 'PowerShell i molnet för Kina, myndigheter och Tyskland'
-          href: ../common/storage-powershell-independent-clouds.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Azure CLI 2.0
-          href: ../common/storage-azure-cli.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Azure CLI 1.0
-          href: ../common/storage-azure-cli-nodejs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Registrera en server med Azure File Sync
-          href: storage-sync-files-server-registration.md
-        - name: Lägga till en serverslutpunkt för Azure File Sync
-          href: storage-sync-files-server-endpoint.md
-        - name: Använd Storage Explorer med Azure File Storage
-          href: ../../vs-azure-tools-storage-explorer-files.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Azure Automation
-          href: ../common/storage-manage-with-automation.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Skydda
       items:
         - name: Säkerhetsguide
@@ -238,5 +230,3 @@
           href: 'https://github.com/Azure/azure-storage-ruby'
         - name: iOS
           href: 'https://github.com/Azure/azure-storage-ios'
-    - name: Viktig information om Azure File Sync
-      href: storage-files-release-notes.md
