--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -6,14 +6,14 @@
       href: azure-stack-poc.md
     - name: Viktig information
       items:
+        - name: 1803 uppdatering
+          href: azure-stack-update-1803.md
         - name: 1802 uppdatering
           href: azure-stack-update-1802.md
         - name: 1712 uppdatering
           href: azure-stack-update-1712.md
         - name: 1711 uppdatering
           href: azure-stack-update-1711.md
-        - name: 1710 uppdatering
-          href: azure-stack-update-1710.md
 - name: Snabbstarter
   expanded: true
   items:
@@ -58,9 +58,9 @@
             - name: Hämta Azure Stack PKI-certifikat
               href: azure-stack-get-pki-certs.md
             - name: Förbered Azure Stack PKI-certifikat
-              href: prepare-pki-certs.md
+              href: azure-stack-prepare-pki-certs.md
             - name: Verifiera Azure Stack PKI-certifikat
-              href: validate-pki-certs.md
+              href: azure-stack-validate-pki-certs.md
         - name: Identitetsintegrering
           href: azure-stack-integrate-identity.md
         - name: Externa övervakning
