--- a/articles/active-directory/TOC.yml
+++ b/articles/active-directory/TOC.yml
@@ -5,12 +5,18 @@
 - name: Rollbaserad åtkomstkontroll (RBAC)
   href: role-based-access-control-what-is.md
   items:
-    - name: Hantera åtkomsttilldelningar
+    - name: Hantera rolltilldelningar
       items:
         - name: Efter användare
           href: role-based-access-control-manage-assignments.md
         - name: Efter resurs
           href: role-based-access-control-configure.md
+        - name: Med Azure CLI
+          href: role-based-access-control-manage-access-azure-cli.md
+        - name: Med PowerShell
+          href: role-based-access-control-manage-access-powershell.md
+        - name: Med REST
+          href: role-based-access-control-manage-access-rest.md
     - name: Inbyggda roller
       href: role-based-access-built-in-roles.md
     - name: Anpassade roller
@@ -19,14 +25,6 @@
       href: role-based-access-control-create-custom-roles-for-internal-external-users.md
     - name: Rapportering
       href: role-based-access-control-access-change-history-report.md
-    - name: Fler sätt att hantera roller på
-      items:
-        - name: Med Azure CLI
-          href: role-based-access-control-manage-access-azure-cli.md
-        - name: Med PowerShell
-          href: role-based-access-control-manage-access-powershell.md
-        - name: Med REST
-          href: role-based-access-control-manage-access-rest.md
     - name: Öka administratörsåtkomst till klientorganisation
       href: role-based-access-control-tenant-admin-access.md
     - name: Felsöka
