--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -150,6 +150,9 @@
         - name: Custom Vision Service
           tocHref: /azure/cognitive-services/custom-vision-service/
           topicHref: /azure/cognitive-services/custom-vision-service/
+        - name: Känsla
+          tocHref: /azure/cognitive-services/emotion/home
+          topicHref: /azure/cognitive-services/emotion/home
         - name: Ansikte
           tocHref: /azure/cognitive-services/face/
           topicHref: /azure/cognitive-services/face/
