--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -132,9 +132,24 @@
       tocHref: '/azure/#pivot=products&panel=ai'
       topicHref: '/azure/#pivot=products&panel=ai'
       items:
+        - name: Automatiska förslag i Bing
+          tocHref: /azure/cognitive-services/Bing-Autosuggest/
+          topicHref: /azure/cognitive-services/Bing-Autosuggest/
         - name: Anpassad Bing-sökning
           tocHref: /azure/cognitive-services/bing-custom-search/
           topicHref: /azure/cognitive-services/bing-custom-search/
+        - name: Entitetssökning i Bing
+          tocHref: /azure/cognitive-services/bing-entities-search/
+          topicHref: /azure/cognitive-services/bing-entities-search/
+        - name: Bildsökning i Bing
+          tocHref: /azure/cognitive-services/bing-image-search/
+          topicHref: /azure/cognitive-services/bing-image-search/
+        - name: Nyhetssökning i Bing
+          tocHref: /azure/cognitive-services/bing-news-search/
+          topicHref: /azure/cognitive-services/bing-news-search/
+        - name: Videosökning i Bing
+          tocHref: /azure/cognitive-services/Bing-Video-Search/
+          topicHref: /azure/cognitive-services/Bing-Video-Search/
         - name: Webbsökning i Bing
           tocHref: /azure/cognitive-services/bing-web-search/
           topicHref: /azure/cognitive-services/bing-web-search/
@@ -144,6 +159,9 @@
         - name: Visuellt innehåll
           tocHref: /azure/cognitive-services/computer-vision/
           topicHref: /azure/cognitive-services/computer-vision/
+        - name: Tjänst för anpassat beslut
+          tocHref: /azure/cognitive-services/custom-decision-service/custom-decision-service-overview/
+          topicHref: /azure/cognitive-services/custom-decision-service/custom-decision-service-overview/
         - name: Tjänst för anpassat tal
           tocHref: /azure/cognitive-services/custom-speech-service/
           topicHref: /azure/cognitive-services/custom-speech-service/
@@ -151,23 +169,26 @@
           tocHref: /azure/cognitive-services/custom-vision-service/
           topicHref: /azure/cognitive-services/custom-vision-service/
         - name: Känsla
-          tocHref: /azure/cognitive-services/emotion/home
-          topicHref: /azure/cognitive-services/emotion/home
+          tocHref: /azure/cognitive-services/emotion/home/
+          topicHref: /azure/cognitive-services/emotion/home/
         - name: Ansikte
           tocHref: /azure/cognitive-services/face/
           topicHref: /azure/cognitive-services/face/
         - name: Språkförståelse (LUIS)
           tocHref: /azure/cognitive-services/LUIS/
           topicHref: /azure/cognitive-services/LUIS/
+        - name: QnA Maker
+          tocHref: /azure/cognitive-services/qnamaker/home/
+          topicHref: /azure/cognitive-services/qnamaker/home/
         - name: Textanalys
           tocHref: /azure/cognitive-services/text-analytics/
-          topicHref: /azure/cognitive-services/text-analytics/overview
+          topicHref: /azure/cognitive-services/text-analytics/
         - name: Videoindexering
-          tocHref: /azure/cognitive-services/video-indexer/video-indexer-overview
-          topicHref: /azure/cognitive-services/video-indexer/video-indexer-overview
+          tocHref: /azure/cognitive-services/video-indexer/video-indexer-overview/
+          topicHref: /azure/cognitive-services/video-indexer/video-indexer-overview/
         - name: Content Moderator
-          tocHref: /azure/cognitive-services/content-moderator/overview
-          topicHref: /azure/cognitive-services/content-moderator/overview
+          tocHref: /azure/cognitive-services/content-moderator/overview/
+          topicHref: /azure/cognitive-services/content-moderator/overview/
     - name: Anslutningar
       tocHref: /azure/connectors/
       topicHref: /azure/connectors/
