--- a/articles/sql-database/index.yml
+++ b/articles/sql-database/index.yml
@@ -3,38 +3,38 @@ documentType: LandingData
 title: Dokumentation om Azure SQL Database
 metadata:
   document_id: 36d89c48-3646-380e-34a0-ae3ac62e2641
-  title: "Dokumentation om SQL Database – självstudier, API-referens"
+  title: Dokumentation om SQL Database – självstudier, API-referens
   meta.description: Learn how to use Azure SQL databases.
   services: sql-database
-  author: czeumault
-  manager: carolz
+  author: CarlRabeler
+  manager: carigg
   ms.service: sql-database
   ms.tgt_pltfrm: na
   ms.devlang: 
   ms.topic: landing-page
-  ms.date: 05/03/2017
-  ms.author: carolz
-  ms.openlocfilehash: 4acc092e4c6006263dda31ab2a54038e60e57651
-  ms.sourcegitcommit: 8aab1aab0135fad24987a311b42a1c25a839e9f3
+  ms.date: 04/01/2018
+  ms.author: carlrab
+  ms.openlocfilehash: b7888a2bece1a9b601c3629deb1c1dd1fc5cbbe3
+  ms.sourcegitcommit: 3a4ebcb58192f5bf7969482393090cb356294399
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 03/16/2018
+  ms.lasthandoff: 04/06/2018
 abstract:
-  description: "Azure SQL Database är en relationsdatabas-som-tjänst som bygger på Microsoft SQL Server-motorn. SQL Database är en högpresterande, tillförlitlig och säker databas som du kan använda för att skapa datadrivna program och webbplatser i valfritt programmeringsspråk, utan att behöva hantera infrastrukturen. Lär dig hur du använder SQL Database med våra snabbstarter, självstudier och exempel."
+  description: Azure SQL Database är en relationsdatabas-som-tjänst som bygger på Microsoft SQL Server-motorn. SQL Database är en högpresterande, tillförlitlig och säker databas som du kan använda för att skapa datadrivna program och webbplatser i valfritt programmeringsspråk, utan att behöva hantera infrastrukturen. Lär dig hur du använder SQL Database med våra snabbstarter, självstudier och exempel.
   aside:
     image:
       alt: 
       height: 110
       src: https://docs.microsoft.com/azure/sql-database/media/index/create-sql-database-on-azure.png
       width: 250
-    title: "Skapa en SQL-databas på Azure. (3:12)"
+    title: Skapa en SQL-databas på Azure. (3:12)
     href: https://azure.microsoft.com/resources/videos/create-sql-database-on-azure/
     width: 250
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig att skapa en SQL-databas, hantera den med hjälp av SQL Management Studio och utveckla den i C#, Java, Python, Node.js och Ruby:"
+    text: 'Lär dig att skapa en SQL-databas, hantera den med hjälp av SQL Management Studio och utveckla den i C#, Java, Python, Node.js och Ruby:'
   - type: list
     style: icon48
     items:
@@ -50,24 +50,24 @@ sections:
         src: https://docs.microsoft.com/azure/sql-database/media/index/logo_powershell.svg
       text: Azure PowerShell
       href: https://docs.microsoft.com/azure/sql-database/sql-database-get-started-powershell
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Lär dig att skapa, hantera och migrera databaser med SQL DB"
+    text: Lär dig att skapa, hantera och migrera databaser med SQL DB
   - type: list
     style: ordered
     items:
-    - html: "Skapa och utforma schemat för en ny SQL-databas med <a href=\"/azure/sql-database/sql-database-design-first-database\">SSMS</a> eller <a href=\"/azure/sql-database/sql-database-design-first-database-csharp\">.NET</a>"
-    - html: "<a href=\"/azure/sql-database/sql-database-migrate-your-sql-server-database\">Migrera en befintlig SQL Server-databas för att använda Azure SQL Database</a>"
+    - html: Skapa och utforma schemat för en ny SQL-databas med <a href="/azure/sql-database/sql-database-design-first-database">SSMS</a> eller <a href="/azure/sql-database/sql-database-design-first-database-csharp">.NET</a>
+    - html: <a href="/azure/sql-database/sql-database-migrate-your-sql-server-database">Migrera en befintlig SQL Server-databas för att använda Azure SQL Database</a>
     - html: <a href="/azure/sql-database/sql-database-security-tutorial">Skydda din SQL-databas</a>
     - html: <a href="/azure/sql-database/sql-database-implement-geo-distributed-database">Implementera en geodistribuerad databas</a>
-- title: "Kostnadsfri videoutbildning för Pluralsight"
+- title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
     style: cards
     className: cardsFTitle
     items:
-    - title: "Utveckla med .NET för Azure"
+    - title: Utveckla med .NET för Azure
       href: https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=FEED65A23CB221A7
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
@@ -75,7 +75,7 @@ sections:
 - title: Exempel
   items:
   - type: paragraph
-    text: "Hitta skript för att hantera vanliga uppgifter."
+    text: Hitta skript för att hantera vanliga uppgifter.
   - type: list
     style: unordered
     className: spaced noBullet
@@ -90,11 +90,11 @@ sections:
     items:
     - title: Kommandorad
       html: <p><a href="/powershell/module/azurerm.sql/#sql">Azure PowerShell</a></p><p><a href="/powershell/module/elasticdatabasejobs/#elasticdatabasejobs">Azure PowerShell (elastisk databas)</a></p><p><a href="/cli/azure/sql">Azure CLI</a></p>
-    - title: "Språk"
+    - title: Språk
       html: <p><a href="/dotnet/api/microsoft.azure.management.sql.models">.NET</a></p><p><a href="/java/api/com.microsoft.azure.management.sql">Java</a></p><p><a href="https://msdn.microsoft.com/library/mt652093.aspx">Node.js</a></p><p><a href="https://msdn.microsoft.com/library/mt652092.aspx">Python</a></p><p><a href="https://msdn.microsoft.com/library/mt691981.aspx">Ruby</a></p><p><a href="https://msdn.microsoft.com/library/dn865013.aspx">PHP</a></p><p><a href="https://msdn.microsoft.com/library/azure/bb510741.aspx">T-SQL</a></p>
     - title: REST
       html: <p><a href="/rest/api/sql/">REST API-referens</a></p>
     - title: SQL Server-verktyg
-      html: "<p><a href=\"https://msdn.microsoft.com/library/mt238365.aspx\">SQL Server-verktyg</a></p><p><a href=\"https://msdn.microsoft.com/library/mt238290.aspx\">SQL Server Management Studio (SSMS)</a></p><p><a href=\"https://msdn.microsoft.com/library/mt204009.aspx\">SQL Server Data Tools (SSDT)</a></p><p><a href=\"https://msdn.microsoft.com/library/ms162802.aspx\">BCP</a></p><p><a href=\"https://msdn.microsoft.com/library/ms162773.aspx\">SQLCMD</a></p><p><a href=\"https://msdn.microsoft.com/hh550080.aspx\">SqlPackage</a></p><p><a href=\"https://www.nuget.org/packages/Microsoft.Azure.Management.Sql\">Bibliotekspaket för SQL Database-hantering</a></p>"
+      html: <p><a href="https://msdn.microsoft.com/library/mt238365.aspx">SQL Server-verktyg</a></p><p><a href="https://msdn.microsoft.com/library/mt238290.aspx">SQL Server Management Studio (SSMS)</a></p><p><a href="https://msdn.microsoft.com/library/mt204009.aspx">SQL Server Data Tools (SSDT)</a></p><p><a href="https://msdn.microsoft.com/library/ms162802.aspx">BCP</a></p><p><a href="https://msdn.microsoft.com/library/ms162773.aspx">SQLCMD</a></p><p><a href="https://msdn.microsoft.com/hh550080.aspx">SqlPackage</a></p><p><a href="https://www.nuget.org/packages/Microsoft.Azure.Management.Sql">Bibliotekspaket för SQL Database-hantering</a></p>
     - title: SQL Server-drivrutiner
       html: <p><a href="https://msdn.microsoft.com/library/mt654049.aspx">SQL Server-drivrutiner</a></p><p><a href="https://msdn.microsoft.com/library/mt657768.aspx">ADO.NET</a></p><p><a href="https://msdn.microsoft.com/library/mt484311.aspx">JDBC</a></p><p><a href="https://msdn.microsoft.com/library/mt654048.aspx">ODBC</a></p>
