--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -17,18 +17,18 @@
       href: tutorial-simulate-device-linux.md
     - name: Simulera en Edge-enhet – Windows
       href: tutorial-simulate-device-windows.md
-    - name: 'Utveckla en C#-modell'
-      href: tutorial-csharp-module.md
-    - name: Utveckla en Python-modul
-      href: tutorial-python-module.md
+    - name: Distribuera kod i en modul
+      items:
+        - name: 'C#'
+          href: tutorial-csharp-module.md
+        - name: Python
+          href: tutorial-python-module.md
     - name: Distribuera Azure Stream Analytics
       href: tutorial-deploy-stream-analytics.md
     - name: Distribuera Azure Machine Learning
       href: tutorial-deploy-machine-learning.md
     - name: Distribuera Azure Functions
       href: tutorial-deploy-function.md
-    - name: Arbeta med flera moduler i VS Code
-      href: tutorial-multiple-modules-in-vscode.md
 - name: Instruktionsguider
   items:
     - name: Skapa gatewayer
@@ -53,6 +53,8 @@
           href: how-to-vscode-develop-azure-function.md
         - name: Felsöka Azure Functions
           href: how-to-vscode-debug-azure-function.md
+        - name: Arbeta med flera moduler
+          href: tutorial-multiple-modules-in-vscode.md
     - name: Lagra data på gränsen
       href: sql-storage.md
     - name: Felsöka
