--- a/articles/active-directory/managed-service-identity/TOC.yml
+++ b/articles/active-directory/managed-service-identity/TOC.yml
@@ -37,37 +37,49 @@
           href: how-to-use-vm-sign-in.md
         - name: 'Använda med Azure-SDK:er'
           href: how-to-use-vm-sdk.md
-    - name: Använd en virtuell MSI-dator för att få åtkomst till Azure Data Lake Store
+    - name: Använda en Windows VM-/VMSS-hanterad identitet
       items:
-        - name: Från en virtuell Windows-dator
+        - name: Få åtkomst till Azure Data Lake Store
           href: tutorial-windows-vm-access-datalake.md
-        - name: Från en virtuell Linux-dator
-          href: tutorial-linux-vm-access-datalake.md
-    - name: Använd en virtuell MSI-dator för att få åtkomst till Azure Resource Manager
-      items:
-        - name: Från en virtuell Windows-dator
+        - name: Få åtkomst till Azure Resource Manager
           href: tutorial-windows-vm-access-arm.md
-        - name: Från en virtuell Linux-dator
-          href: tutorial-linux-vm-access-arm.md
-    - name: Använd en virtuell MSI-dator för att få åtkomst till Azure SQL
-      items:
-        - name: Från en virtuell Windows-dator
+        - name: Få åtkomst till Azure SQL
           href: tutorial-windows-vm-access-sql.md
-    - name: Använd en virtuell MSI-dator för att få åtkomst till Azure Storage
-      items:
-        - name: Från en virtuell Windows-dator med åtkomstnyckel
+        - name: Få åtkomst till Azure Storage med en åtkomstnyckel
           href: tutorial-windows-vm-access-storage.md
-        - name: Från en virtuell Windows-dator med SAS
+        - name: Få åtkomst till Azure Storage med SAS
           href: tutorial-windows-vm-access-storage-sas.md
-        - name: Från en virtuell Linux-dator med åtkomstnyckel
-          href: tutorial-linux-vm-access-storage.md
-        - name: Från en virtuell Linux-dator med SAS
-          href: tutorial-linux-vm-access-storage-sas.md
-    - name: Använd en virtuell MSI-dator för att få åtkomst till Azure Key Vault
-      items:
-        - name: Från en virtuell Windows-dator
+        - name: Få åtkomst till Azure Key Vault
           href: tutorial-windows-vm-access-nonaad.md
-        - name: Från en virtuell Linux-dator
+    - name: Använda en Linux VM-/VMSS-hanterad identitet
+      items:
+        - name: Få åtkomst till Azure Data Lake Store
+          href: tutorial-linux-vm-access-datalake.md
+        - name: Få åtkomst till Azure Resource Manager
+          href: tutorial-linux-vm-access-arm.md
+        - name: Få åtkomst till Azure Storage med en åtkomstnyckel
+          href: tutorial-linux-vm-access-storage.md
+        - name: Få åtkomst till Azure Storage med SAS
+          href: tutorial-linux-vm-access-storage-sas.md
+        - name: Få åtkomst till Azure Key Vault
           href: tutorial-linux-vm-access-nonaad.md
     - name: Vanliga frågor och kända problem
       href: known-issues.md
+    - name: Referens
+      items:
+        - name: CLI
+          href: /cli/azure/identity
+        - name: PowerShell
+          href: '/powershell/module/azurerm.managedserviceidentity#managed_service_identity'
+        - name: .NET
+          href: '/dotnet/api/microsoft.azure.management.resourcemanager.fluent.authentication#azure-dotnet'
+        - name: Java
+          href: 'https://github.com/Azure/azure-libraries-for-java#ready-to-run-code-samples-for-virtual-machines'
+        - name: Python
+          href: /python/api/azure.mgmt.msi
+        - name: Ruby
+          href: 'https://rubygems.org/gems/azure_mgmt_msi'
+        - name: Node.js
+          href: /javascript/api/ms-rest-azure
+        - name: Go
+          href: 'https://godoc.org/github.com/Azure/azure-sdk-for-go/services/msi/mgmt/2015-08-31-preview/msi'
