--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -30,6 +30,8 @@
       href: storage-quickstart-blobs-ruby.md
     - name: Arbeta med blobar – Node.js
       href: storage-quickstart-blobs-nodejs.md
+    - name: Arbeta med blobar – JavaScript/HTML
+      href: storage-quickstart-blobs-javascript-client-libraries.md
     - name: Arbeta med blobar – PHP
       href: storage-quickstart-blobs-php.md
 - name: Självstudier
