--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -164,7 +164,7 @@ items:
       - name: Säkerhet
         href: database-security.md
       - name: TCO
-        href: 'https://aka.ms/documentdb-tco-paper'
+        href: 'https://aka.ms/cosmosdb-tco-paper'
       - name: Användningsfall
         href: use-cases.md
         items:
@@ -184,13 +184,15 @@ items:
               - name: SQL-frågeprestanda
                 href: sql-api-sql-query-metrics.md
               - name: SQL-spelplan
-                href: 'https://www.documentdb.com/sql/demo'
+                href: 'https://aka.ms/cosmos-db-playground'
               - name: Partitionering
                 href: sql-api-partition-data.md
               - name: 'Lagrade procedurer, utlösare och UDF:er'
                 href: programming.md
               - name: Prestandatestning
                 href: performance-testing.md
+              - name: Prestandatips för Async Java
+                href: performance-tips-async-java.md
               - name: Prestandatips för .NET
                 href: performance-tips.md
               - name: Prestandatips för Java
@@ -378,17 +380,17 @@ items:
           - name: Programloggning med Logic Apps
             href: ../logic-apps/logic-apps-scenario-error-and-exception-handling.md
           - name: Bind till Azure Functions
-            href: ../azure-functions/functions-bindings-documentdb.md
+            href: ../azure-functions/functions-bindings-cosmosdb.md
           - name: Integrera med Azure Search
-            href: ../search/search-howto-index-documentdb.md
+            href: ../search/search-howto-index-cosmosdb.md
           - name: Flytta data med Azure Data Factory
             href: ../data-factory/connector-azure-cosmos-db.md
           - name: Analysera realtidsdata med Azure Stream Analytics
-            href: '../stream-analytics/stream-analytics-define-outputs.md#documentdb'
+            href: '../stream-analytics/stream-analytics-define-outputs.md#azure-cosmos-db'
           - name: Hämta ändrad HL7 FHIR-post med Logic Apps
             href: change-feed-hl7-fhir-logic-apps.md
           - name: Bearbeta sensordata i realtid
-            href: ../hdinsight/hdinsight-storm-iot-eventhub-documentdb.md
+            href: 'https://github.com/hdinsight/hdinsight-storm-examples/blob/master/IotExample/README.md'
           - name: Visualisera din information med Power BI
             href: powerbi-visualize.md
           - name: Utnyttja ODBC-drivrutinen för datavisualisering
