--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -116,10 +116,12 @@
       href: concepts-integration-runtime.md
 - name: Instruktionsguider
   items:
-    - name: Skapa datafabriker visuellt
-      href: author-visually.md
-    - name: Kontinuerlig integrering och distribution
-      href: continuous-integration-deployment.md
+    - name: Författare
+      items:
+        - name: Skapa datafabriker visuellt
+          href: author-visually.md
+        - name: Kontinuerlig integrering och distribution
+          href: continuous-integration-deployment.md
     - name: Kopiera data
       items:
         - name: Kopiera data med Kopiera aktivitet
