--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -72,8 +72,12 @@
       href: sql-database-managed-instance.md
     - name: Tjänstnivåer
       href: sql-database-service-tiers.md
-    - name: Resursbegränsningar
-      href: sql-database-resource-limits.md
+    - name: Lässkalbarhet
+      href: sql-database-read-scale-out.md
+    - name: DTU-baserade resursbegränsningar
+      href: sql-database-dtu-resource-limits.md
+    - name: vCore-baserade resursbegränsningar
+      href: sql-database-vcore-resource-limits.md
     - name: Enkla databaser
       href: sql-database-single-database-resources.md
     - name: Elastiska pooler
@@ -126,7 +130,7 @@
           href: sql-database-business-continuity.md
         - name: Säkerhetskopior av databasen
           href: sql-database-automated-backups.md
-        - name: Kvarhållning av säkerhetskopior
+        - name: Långsiktig kvarhållning av säkerhetskopior
           href: sql-database-long-term-retention.md
         - name: Redundansgrupper
           href: sql-database-geo-replication-overview.md
@@ -306,10 +310,12 @@
           href: sql-database-vnet-service-endpoint-rule-powershell.md
     - name: Verksamhetskontinuitet
       items:
-        - name: Konfigurera valv – säkerhetskopieringar
-          href: sql-database-long-term-backup-retention-configure.md
         - name: Georeplikering – portal
           href: sql-database-geo-replication-portal.md
+        - name: Konfigurera långsiktig kvarhållning av säkerhetskopior – SQL-lagring
+          href: sql-database-long-term-backup-retention-configure.md
+        - name: Konfigurera långsiktig kvarhållning av säkerhetskopior – Azure-valv
+          href: sql-database-long-term-backup-retention-configure-vault.md
     - name: Läsa in och flytta data
       items:
         - name: Läs in data med BCP
