--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -51,6 +51,8 @@
       href: app-service-web-tutorial-custom-ssl.md
     - name: 4 – Lägg till CDN
       href: app-service-web-tutorial-content-delivery-network.md
+    - name: 5 – Autentisera användare
+      href: app-service-web-tutorial-auth-aad.md
 - name: Exempel
   items:
     - name: Azure CLI
@@ -139,7 +141,7 @@
               href: app-service-mobile-how-to-configure-microsoft-authentication.md
             - name: Autentisera med Twitter
               href: app-service-mobile-how-to-configure-twitter-authentication.md
-        - name: Anpassa authN/authZ
+        - name: Anpassa autentisering
           href: app-service-authentication-how-to.md
         - name: Använd en hanterad tjänstidentitet
           href: app-service-managed-service-identity.md
